--- a/components/audio/index.scss
+++ b/components/audio/index.scss
@@ -1,9 +1,28 @@
+@mixin textoverflow() {
+	display: -webkit-box;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 1;
+}
+@keyframes rowup {
+	0% {
+		-webkit-transform: translate(-50%, -50%) rotate(0deg);
+		transform-origin: center center;
+	}
+
+	100% {
+		-webkit-transform: translate(-50%, -50%) rotate(360deg);
+		transform-origin: center center;
+	}
+}
+
 .imt-audio.theme1 {
 	padding: 0 30upx 30upx;
 	background: #fff;
 
 	.top {
-		&>view:nth-child(2) {
+		& > view:nth-child(2) {
 			.title {
 				font-weight: bold;
 				font-size: 34rpx;
@@ -72,7 +91,6 @@
 		height: 40rpx;
 	}
 
-
 	.prevplay {
 		width: 40rpx;
 		height: 40rpx;
@@ -99,7 +117,7 @@
 		display: flex;
 		align-items: center;
 
-		&>view:nth-child(2) {
+		& > view:nth-child(2) {
 			flex: 1;
 			margin-left: 30rpx;
 
@@ -108,6 +126,8 @@
 				font-size: 34rpx;
 				margin-top: 24rpx;
 				text-align: left;
+				max-width: 100%;
+				@include textoverflow;
 			}
 
 			.singer {
@@ -116,6 +136,8 @@
 				margin-top: 10rpx;
 				text-align: left;
 				margin-bottom: 18rpx;
+				max-width: 100%;
+				@include textoverflow;
 			}
 		}
 	}
@@ -188,14 +210,103 @@
 	}
 }
 
-@keyframes rowup {
-	0% {
-		-webkit-transform: translate(-50%, -50%) rotate(0deg);
-		transform-origin: center center;
+.imt-audio.theme3 {
+	background: rgba(0, 0, 0, 0.3);
+	width: 100%;
+	overflow: hidden;
+	display: flex;
+	padding: 40rpx 20rpx;
+	box-sizing: border-box;
+	max-height: 200rpx;
+	.top {
+		width: 140rpx;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		position: relative;
 	}
 
-	100% {
-		-webkit-transform: translate(-50%, -50%) rotate(360deg);
-		transform-origin: center center;
+	.audio-wrapper {
+		display: flex;
+		flex-direction: column;
+		// padding: 30rpx 20rpx;
+		flex: 1;
+		color: #fff;
+		margin-left: 20rpx;
+
+		.titlebox {
+			display: flex;
+			line-height: 46rpx;
+			margin-bottom: 30rpx;
+			.title {
+				font-weight: bold;
+				font-size: 36rpx;
+				max-width: 50%;
+				@include textoverflow;
+			}
+
+			.singer {
+				margin-left: 20rpx;
+				font-size: 30rpx;
+				max-width: 50%;
+				@include textoverflow;
+			}
+		}
+	}
+	.slidebox {
+		display: flex;
+		
+		justify-content: space-between;
+		width: 96%;
+		view{
+			&:first-child{
+				font-size: 28rpx;
+			}
+			&:last-child{
+				font-size: 30rpx;
+				text{
+					&:last-child{
+						margin-left: 40rpx;
+					}
+				}
+			}
+		}
+	}
+	/deep/ .uni-slider-tap-area {
+		padding: 0;
+	}
+	/deep/ .uni-slider-wrapper {
+		min-height: 0;
+	}
+	/deep/ .uni-slider-handle-wrapper {
+		height: 4px;
+	}
+	.audio-slider {
+		position: absolute;
+		top: 0;
+		margin: 0;
+		width: 100%;
+		left: 0;
+		padding: 0;
+	}
+
+	.cover {
+		width: 120rpx;
+		height: 120rpx;
+		box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		animation-fill-mode: forwards;
+		-webkit-animation-fill-mode: forwards;
+	}
+
+	.play {
+		width: 80rpx;
+		height: 80rpx;
+		z-index: 99;
+		background: rgba(0, 0, 0, 0.4);
+		border-radius: 50%;
 	}
 }
