--- a/zaudio/index.scss
+++ b/zaudio/index.scss
@@ -113,7 +113,7 @@
 	overflow: hidden;
 
 	.top {
-		background: #f5f5f5;
+		background: #efefef;
 		display: flex;
 		align-items: center;
 
@@ -211,7 +211,7 @@
 }
 
 .imt-audio.theme3 {
-	background: rgba(0, 0, 0, 0.3);
+	background: #ccc;
 	width: 100%;
 	overflow: hidden;
 	display: flex;
@@ -229,8 +229,7 @@
 
 	.audio-wrapper {
 		display: flex;
-		flex-direction: column;
-		// padding: 30rpx 20rpx;
+		flex-direction: column; 
 		flex: 1;
 		color: #fff;
 		margin-left: 20rpx;
